--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -9,7 +9,7 @@
     </head>
     <body class="container">
         <header class="page-header">
-            <h1>Safe Access to Natural Areas</h1>
+            <h1><img class="brand-logo" src="/img/logo.png" th:src="@{/img/logo.png}"><abbr title="Safe Access to Natural Areas">SANA</abbr> - <span layout:fragment="title"></span></h1>
             <nav th:replace="fragments/nav"></nav>
         </header>
         <main layout:fragment="content"></main>
