--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -37,5 +37,5 @@
             </tr>
         </table>
     </form>
-    <a href="add" class="btn btn-success" role="button">Crear reserva</a>
+    <input type="submit" value="Añadir reserva" /></td>
 </main>
