--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -8,7 +8,7 @@
           th:object="${object}" method="post">
         <table>
             <tr>
-                <td><label>Area</label></td>
+                <td><label>Codigo</label></td>
                 <td><input type="number" th:field="*{code}"></td>
             </tr>
             <tr>
