--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-        <link type="text/css" th:href="@{/css/base.css}" href="/css/base.css" rel="stylesheet"/>
+        <link type="text/css" th:href="@{/css/base.css}" rel="stylesheet"/>
         <title layout:title-pattern="$CONTENT_TITLE">Safe Access to Natural Areas</title>
     </head>
     <body class="container">
