--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -19,13 +19,12 @@
     <tr th:each="object: ${#lists.sort(objects)}">
       <td th:text="*{object.code}"></td>
       <td th:text="*{object.occupied}"></td>
-      <td th:text="*{datas[objectStat.index]['area']}"></td>
-      <td th:text="*{datas[objectStat.index]['zones']}"></td>
+      <td th:text="*{objectsData[objectStat.index]['area']}"></td>
+      <td th:text="*{objectsData[objectStat.index]['zones']}"></td>
       <td th:text="*{object.date}"></td>
-      <td th:text="*{datas[objectStat.index]['areaPeriod']}"></td>
+      <td th:text="*{objectsData[objectStat.index]['areaPeriod']}"></td>
       <td><a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button" th:if="*{object.active}">Cancelar</a></td>
     </tr>
     </tbody>
   </table>
-  <a href="add" class="btn btn-success" role="button">Crear reserva</a>
 </main>
