--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -35,6 +35,6 @@
                 <td><input type="text" id="address" th:field="*{address}"></td>
             </tr>
         </table>
-        <input type="submit" value="Añadir ciudadano/ciudadana" /></td>
+        <input type="submit" value="Añadir ciudadano/ciudadana" class="btn btn-success" /></td>
     </form>
 </main>
