--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -30,6 +30,6 @@
                 <td><input type="time" id="enter" th:field="*{enter}"><input type="time" id="exit" th:field="*{exit}"></td>
             </tr>
         </table>
-        <input type="submit" value="Añadir reserva" /></td>
+        <input type="submit" value="Añadir reserva" class="btn btn-success" />
     </form>
 </main>
