--- a/src/main/resources/templates/zone/list.html
+++ b/src/main/resources/templates/zone/list.html
@@ -5,27 +5,27 @@
     <p th:if="${#lists.isEmpty(objects)}">No hay ninguna zona registrada</p>
     <table th:unless="${#lists.isEmpty(objects)}" class="table table-striped">
         <thead>
-        <tr>
-            <th>Id</th>
-            <th>Nombre</th>
-            <th>Area</th>
-            <th>Capacidad</th>
-            <th>Fecha de alta</th>
-            <th>Fecha de baja</th>
-            <th></th>
-        </tr>
+            <tr>
+                <th>Id</th>
+                <th>Nombre</th>
+                <th>Area</th>
+                <th>Capacidad</th>
+                <th>Fecha de alta</th>
+                <th>Fecha de baja</th>
+                <th><a href="add" class="btn btn-success" role="button">Añadir zona</a></th>
+            </tr>
         </thead>
         <tbody>
-        <tr th:each="object: ${#lists.sort(objects)}">
-            <td th:text="*{object.id}"></td>
-            <td th:text="*{object.name}"></td>
-            <td th:text="*{objectsData[objectStat.index]['area']}"></td>
-            <td th:text="*{object.capacity}"></td>
-            <td th:text="*{object.signUp}"></td>
-            <td th:text="*{object.signDown}"></td>
-            <td><a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button" th:if="*{object.active}">Cancelar</a></td>
-        </tr>
+            <tr th:each="object: ${#lists.sort(objects)}">
+                <td th:text="*{object.id}"></td>
+                <td th:text="*{object.name}"></td>
+                <td th:text="*{objectsData[objectStat.index]['area']}"></td>
+                <td th:text="*{object.capacity}"></td>
+                <td th:text="*{object.signUp}"></td>
+                <td th:text="*{object.signDown}"></td>
+                <td><a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button" th:if="*{object.active}">Cancelar</a></td>
+            </tr>
         </tbody>
     </table>
-    <a href="add" class="btn btn-success" role="button">Añadir zona</a>
+
 </main>
