--- a/src/main/resources/templates/areaPeriod/add.html
+++ b/src/main/resources/templates/areaPeriod/add.html
@@ -19,6 +19,6 @@
                 <td><input type="text" id="capacity" th:field="*{capacity}"></td>
             </tr>
         </table>
-        <input type="submit" value="Añadir Zona" /></td>
+        <input type="submit" value="Añadir Zona" class="btn btn-success" /></td>
     </form>
 </main>
