--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -8,22 +8,21 @@
         <tr>
             <th>Fechas</th>
             <th>Horario</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="add" class="btn btn-success" role="button">Añadir area</a></th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="object: ${#lists.sort(objects)}">
             <td th:text="*{object.toScheduleString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
-            <td><a th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar</a></td>
-            <td><a th:href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver personal</a></td>
-            <td><a th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a></td>
-            <td><a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button">Eliminar</a></td>
+            <td>
+                <a th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar</a>
+                <a th:href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver personal</a>
+                <a th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
+                <a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button">Eliminar</a>
+            </td>
         </tr>
         </tbody>
     </table>
-    <a href="add" class="btn btn-success" role="button">Añadir area</a>
+
 </main>
