--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -13,6 +13,6 @@
             <nav th:replace="fragments/nav"></nav>
         </header>
         <main layout:fragment="content"></main>
-        <footer class="text-muted">EI1027 - Diseño y Implementacioon de Sistemas de la Información</footer>
+        <footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementacioon de Sistemas de la Información</footer>
     </body>
 </html>
