--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -24,7 +24,7 @@
                 <td th:text="*{object.type.name}"></td>
                 <td th:text="*{object.description}"></td>
                 <td th:text="*{object.location}"></td>
-                <td th:text="*{object.image}"></td>
+                <td><a th:href="*{object.image}" th:text="*{object.image}" target="_blank"></a></td>
                 <td>
                     <a th:href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver Horarios</a>
                     <a th:href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver zonas</a>
