--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -16,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr th:each="object: ${#lists.sort(objects)}">
+      <tr th:each="object: ${objects}">
         <td th:text="*{object.id}"></td>
         <td th:text="*{object.occupied}"></td>
         <td th:text="*{objectsData[objectStat.index]['area']}"></td>
