--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="object: ${#lists.sort(objects)}">
+            <tr th:each="object: ${objects}">
                 <td th:text="*{object.name}"></td>
                 <td th:text="*{object.signUp}"></td>
                 <td th:text="*{object.signDown}"></td>
