--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
-<main layout:fragment="content">
-  <h2>Error durante la operación</h2>
-  <p th:text="${message}"></p>
-</main>
+<span layout:fragment="title">Error durante la operacion</span>
+<main layout:fragment="content" th:text="${message}"></main>
