--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -7,16 +7,14 @@
         <thead>
             <tr>
                 <th>Nombre</th>
-                <th>Fecha de alta</th>
-                <th>Fecha de baja</th>
+                <th>Validez</th>
                 <th><a href="add" class="btn btn-success" role="button">Añadir municipio</a></th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="object: ${objects}">
                 <td th:text="*{object.name}"></td>
-                <td th:text="*{object.signUp}"></td>
-                <td th:text="*{object.signDown}"></td>
+                <td th:text="*{object.toSignString}"></td>
                 <td>
                     <a th:href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver areas</a>
                     <a th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
