--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <th><label for="capacity">Capacidad</label></th>
-                <td><input type="text" id="capacity" th:field="*{capacity}"></td>
+                <td><input type="number" id="capacity" th:field="*{capacity}"></td>
             </tr>
         </table>
         <input type="submit" value="Añadir Zona" class="btn btn-success" /></td>
