--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -12,7 +12,7 @@
         <th>Zonas</th>
         <th>Día</th>
         <th>Horario</th>
-        <th></th>
+        <th><a href="add" class="btn btn-success" role="button">Crear reserva</a></th>
       </tr>
     </thead>
     <tbody>
@@ -27,4 +27,5 @@
       </tr>
     </tbody>
   </table>
+
 </main>
